--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,732 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Inter, serif;
+  transition: .3s;
+}
+
+@font-face {
+  font-family: 'Gagalin';
+  src: url('./fonts/Gagalin-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.adtPage {
+  margin-top: 40px !important;
+}
+
+.container {
+  max-width: 1350px;
+  margin: 0 auto;
+  padding: 10px 0;
+}
+
+.content {
+  max-width: 1350px;
+  margin: 0 auto;
+  padding: 10px 0;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 48px;
+
+  .header__logo {
+    width: 200px;
+
+    img {
+      width: 100% !important;
+    }
+  }
+
+  &__right {
+    display: flex;
+    gap: 48px;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 70%;
+    a{
+      color: #333;
+    }
+
+    & > div, & > a{
+      display: flex;
+      gap: 12px;
+      align-items: center;
+    }
+  }
+
+  &__phone {
+    color: red;
+    cursor: pointer;
+  }
+
+  &__search {
+    background: #f3f5f6;
+    position: relative;
+    border: 1px solid #f3f5f6;
+    border-radius: 24px;
+    width: 100%;
+    max-width: 400px;
+
+    input {
+      background: transparent;
+      border: none;
+      width: 100%;
+      padding: 8px 44px;
+
+      box-sizing: border-box;
+      border-radius: 24px;
+      font-size: 14px;
+      line-height: 125%;
+      outline: none;
+      color: #151516;
+
+      &::placeholder {
+        color: #a6afb7;
+      }
+    }
+
+
+    img {
+      position: absolute;
+      left: 12px;
+    }
+  }
+}.afisha__item--text{
+   width: 100%;
+
+   overflow: hidden;
+ }
+
+.string {
+  display: flex;
+  overflow-x: auto;
+  crollbar-width: none;
+  -ms-overflow-style: none;
+  font-size: 12px;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  background: #f3f5f6;
+  font-weight: 500;
+  color: #151516;
+  scroll-behavior: smooth;
+  padding: 0px 36px;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  &__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    position: relative;
+    font-size: 12px;
+    padding: 20px 20px;
+    color: #333;
+    transition: .3s;
+    white-space: nowrap;
+    width: max-content;
+    text-transform: uppercase;
+    line-height: 125%;
+    letter-spacing: .6px;
+  }
+}
+
+.seeAll {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a19f9f;
+  border-radius: 10px;
+  margin-top: 12px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #333;
+}
+
+.adt {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr) !important;
+
+  gap: 20px;
+
+  &__item {
+    cursor: pointer;
+    padding: 20px;
+    width: 100%;
+    height: 149px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    border-radius: var(--Radius-medium, 10px);
+    color: white;
+    font-size: 24px;
+    font-weight: 800;
+    text-align: right;
+    background: radial-gradient(150% 200% at 50% 50%, #ad97ef 0%, #A799DB 35%, #6553a4 65%, #52439B 100%);
+    position: relative;
+
+    &:hover {
+      background: radial-gradient(150% 200% at 50% 50%, #D5CCF2 0%, #B3A3E4 35%, #8A7ECD 65%, #6356A5 100%);
+
+    }
+
+    &::before {
+      content: url("./images/error.png");
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+  }
+}
+
+.afisha {
+  padding: 60px 0;
+
+  h1 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 60px;
+    color: #151516;
+    line-height: 125%;
+    text-transform: none;
+    margin-bottom: 60px;
+  }
+
+  .afisha__block {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px; /* Можете изменить значение, чтобы задать нужное расстояние между элементами */
+  }
+
+  &__item {
+    max-width: 227px;
+    overflow: hidden;
+
+    &--small {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      margin-bottom: 9px;
+      color: #777d83;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 125%;
+      max-width: 228px;
+      white-space: nowrap
+    }
+  }
+
+  &__img {
+    max-width: 100%;
+    margin-bottom: 12px;
+
+    img {
+      width: 100%;
+      object-fit: cover;
+      min-width: 100%;
+      border-radius: 10px;
+      aspect-ratio: 5/7;
+      position: static !important;
+    }
+  }
+
+  &__name {
+    color: #151516;
+    font-weight: 700;
+    line-height: 125%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+
+}
+
+.soska {
+  margin-top: 60px;
+}
+
+
+
+.MuiTypography-root.MuiTypography-body1.css-rizt0-MuiTypography-root{
+  display: flex;
+  width: 100% !important;
+  margin: 0 auto;
+  height: 50vh;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.toplist {
+  padding: 0 0 20px 0;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  &__title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0;
+
+    h3 {
+      font-size: 24px;
+      text-transform: uppercase;
+      font-weight: 800;
+      padding: 0 10px 0 20px;
+      white-space: nowrap;
+    }
+
+    .line {
+      width: 100%;
+      background: black;
+      height: .5px;
+    }
+
+
+  }
+
+  &__btn {
+    display: inline-flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding: 6px 8px;
+    border-radius: 16px;
+    border: 1px solid #a6afb7;
+    background: #fff;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 12.5px;
+    color: #40464d;
+    min-width: 53px;
+    height: 25px;
+    margin: 0 20px 0 0;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.forum {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr) !important;
+
+  gap: 24px;
+  align-items: center;
+
+  &__item {
+    background: rgba(23, 22, 76, 0.87);
+    border-radius: 10px;
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-align: right;
+    padding: 20px;
+    font-size: 20px;
+    color: white;
+    position: relative;
+
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 60px;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      height: 60px;
+      background-image: url("./images/forum.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+  }
+}
+
+.sos {
+  width: 100%;
+  height: 439px;
+  background: url("images/sos.png");
+  border-radius: 10px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
+  color: white;
+  margin-bottom: 60px;
+
+  * {
+    font-family: 'Gagalin', serif;
+
+  }
+
+  &__title {
+    font-size: 98px;
+    text-align: center;
+  }
+
+  &__subtitle {
+    font-size: 60px;
+  }
+
+  &__button {
+    margin-top: 24px;
+    padding: 10px;
+    border: 2px solid white;
+    cursor: pointer;
+  }
+}
+
+.house {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr) !important;
+  gap: 10px;
+
+  &__item {
+    width: 100%;
+  }
+
+  &__img {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 12px;
+
+    img {
+      object-fit: cover;
+      border-radius: 10px;
+      width: 100%;
+      max-width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.pop{
+  min-height: 70vh ;
+}
+
+.spravka{
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(5, 1fr) !important;
+  gap: 10px;
+  &__item{
+    cursor: pointer;
+    width: 100%;
+    padding: 20px;
+    background: radial-gradient(150% 200% at 50% 50%, #7762b9 0%, #A799DB 35%, #4625b9 65%, #52439B 100%);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;align-items: center;text-align: center;
+    color: white;
+    font-size: 18px;
+    font-weight: 800;
+  }
+}
+
+.footer {
+  width: 100%;
+  height: 80px;
+  background: #151516;
+  color: #777d83;
+  margin-top: 80px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+  a {
+    color: #777d83;
+
+  }
+
 }
 
-.App-link {
-  color: #61dafb;
+
+@media screen and (max-width: 1400px) {
+  .container {
+    padding: 18px 24px 10px;
+    background: #f3f5f6;
+  }
+
+  .forum {
+    grid-template-columns: repeat(5, 1fr) !important;
+  }
+
+
+  .content {
+    padding: 0 24px;
+
+  }
+
+  @media screen and (max-width: 1200px) {
+    .afisha__block {
+      grid-template-columns: repeat(5, 1fr) !important;
+    }
+
+    .forum {
+      grid-template-columns: repeat(4, 1fr) !important;
+    }
+
+    .adt, .spravka {
+      grid-template-columns: repeat(4, 1fr) !important;
+    }
+
+
+    .house {
+      grid-template-columns: repeat(3, 1fr) !important;
+    }
+    .sos {
+      &__title {
+        font-size: 60px;
+      }
+
+      &__subtitle {
+        font-size: 36px;
+      }
+    }
+  }
+
+
+
+  @media screen and (max-width: 850px) {
+    .header {
+      gap: 24px;
+
+      &__logo {
+        img {
+          max-width: 150px;
+        }
+      }
+    }
+
+    .house {
+      grid-template-columns: repeat(2, 1fr) !important;
+    }
+
+    .forum {
+      grid-template-columns: repeat(3, 1fr) !important;
+      gap: 10px;
+
+    }
+
+    .sos {
+      height: 300px;
+
+      &__title {
+        font-size: 60px;
+        padding: 0 60px;
+      }
+
+      &__subtitle {
+        font-size: 24px;
+      }
+    }
+
+    .toplist {
+      h3 {
+        font-size: 18px;
+      }
+    }
+
+    .afisha__block {
+      grid-template-columns: repeat(4, 1fr) !important;
+    }
+
+    .adt, .spravka {
+      grid-template-columns: repeat(3, 1fr) !important;
+    }
+    .string {
+      border: 0.5px solid #dde2e5;
+
+    }
+
+    .header__right {
+      width: fit-content;
+      gap: 24px;
+    }
+
+    @media screen and (max-width: 750px) {
+      .header__pc {
+        display: none;
+      }
+
+      .forum {
+        grid-template-columns: repeat(2, 1fr) !important;
+
+      }
+
+      .sos {
+        &__title {
+          font-size: 60px;
+        }
+
+        &__subtitle {
+          font-size: 18px;
+        }
+      }
+
+      .afisha {
+        padding-top: 40px;
+
+        h1 {
+          font-size: 36px;
+          margin-bottom: 40px;
+        }
+
+        &__name {
+          font-size: 14px;
+          margin-bottom: 4px;
+          margin-top: -6px;
+        }
+
+        &__item {
+          &--small {
+            margin-bottom: 1px;
+            font-size: 12px;
+            gap: 8px;
+          }
+
+          &--svg {
+            width: 14px;
+          }
+        }
+      }
+
+      .afisha__block {
+        grid-template-columns: repeat(3, 1fr) !important;
+      }
+
+      .adt, .spravka {
+        grid-template-columns: repeat(2, 1fr) !important;
+
+        &__item {
+          font-weight: 600;
+          font-size: 18px;
+        }
+      }
+
+      @media screen and (max-width: 650px) {
+        .sos {
+          &__title {
+            font-size: 36px;
+          }
+
+          &__subtitle {
+            font-size: 18px;
+          }
+        }
+
+        .forum {
+          &__item {
+            height: 150px;
+            font-size: 18px;
+            padding: 12px;
+
+            &::before {
+              width: 50px;
+              height: 50px;
+            }
+          }
+        }
+        .header__search {
+          width: fit-content;
+          padding: 0;
+          background: transparent;
+          border: none;
+
+          img {
+            position: relative;
+            left: 0;
+          }
+
+          input {
+            display: none;
+          }
+        }
+
+        @media screen and (max-width: 510px) {
+          .afisha__block {
+            grid-template-columns: repeat(2, 1fr) !important;
+          }
+
+          .forum {
+            &__item {
+              height: 100px;
+              font-size: 14px;
+              padding: 12px;
+
+              &::before {
+                width: 30px;
+                height: 30px;
+              }
+            }
+          }
+
+          .house {
+            grid-template-columns: repeat(2, 1fr) !important;
+            width: 100%;
+
+            &__item {
+              width: 100%;
+              min-width: 100%;
+
+            }
+
+            &__img {
+              max-height: 150px;
+
+              img {
+                max-height: 100%;
+              }
+            }
+          }
+
+          .spravka{
+            gap: 12px;
+            padding: 0;
+            grid-template-columns: repeat(1, 1fr) !important;
+
+          }
+          .adt {
+            gap: 12px;
+
+            &__item {
+              height: 110px;
+              padding: 12px;
+              font-weight: 600;
+              font-size: 15px;
+
+              &::before {
+                left: 12px;
+                top: 12px;
+              }
+            }
+          }
+
+        }
+
+      }
+    }
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.leaflet-control-attribution.leaflet-control {
+  display: none !important;
+}
+
+
+a {
+  text-decoration: none;
 }
